<resources>
    <string name="app_name">Razas y Pelajes</string>
    <string name="jugar">Jugar</string>
    <string name="reconocimiento">Reconocimiento</string>
    <string name="cedica_logo">CEDICA Logo</string>
    <string name="help_image">Help Image</string>
    <string name="settings_image">Settings Image</string>
    <string name="razas_y_pelajes">Razas y Pelajes</string>
    <string name="volver">Volver</string>
    <string name="play_sound_button">Play Sound Button</string>
    <string name="modo_reconocimiento">Modo Reconocimiento</string>
    <string name="interaccion">Interaccion</string>
    <string name="modo_interaccion">Modo Interaccion</string>
    <string name="ajustes">Ajustes</string>
    <string name="lista">Lista</string>
    <string name="grilla">Grilla</string>
    <string name="razas">Razas</string>
    <string name="cruzas">Cruzas</string>
    <string name="pelajes">Pelajes</string>
    <string name="aceptar">Aceptar</string>
    <string name="interaccion_a">Interaccion A</string>
    <string name="interaccion_b">Interaccion B</string>
    <string name="interaccion_c">Interaccion C</string>
    <string name="nivel_1">Nivel 1</string>
    <string name="nivel_2">Nivel 2</string>
    <string name="masculina">Masculina</string>
    <string name="femenina">Femenina</string>
    <string name="radiobutton">RadioButton</string>
    <string name="cruza">Cruza</string>
    <string name="sex">sex</string>
    <string name="level">level</string>
    <string name="viewMode">viewMode</string>
    <string name="gameMode">gameMode</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="error_sound_key">error</string>
    <string name="horse_sound_key">horse</string>
    <string name="correct_sound_key">correct</string>
    <string name="config">config_preferences</string>
    <string name="razas_y_pelajes_pregunta">raza %1$s y pelaje %2$s</string >
    <string name="horse_sound">Horse Sound</string>
    <string name="horse_name">Horse Name</string>
    <string name="play_horse_sound">Play Horse Sound</string>
    <string name="horse_breed_placeholder">Horse Breed Placeholder</string>
    <string name="placeholder">Placeholder</string>
    <string name="quit_message">¿Desea volver a la pantalla principal?</string>
    <string name="accept">aceptar</string>
    <string name="cancel">cancelar</string>
    <string name="victory_message">¡Has ganado!</string>
    <string name="victory_finish">Volver al menu</string>
    <string name="victory_restart">Volver a jugar</string>
    <string name="defeat_message">¡Has perdido!</string>
    <string name="defeat_finish">Volver al menu</string>
    <string name="defeat_restart">Volver a intentar</string>
    <string name="loreipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lastLevel">last level</string>
    <string name="reconRadio">reconRadio</string>
    <string name="reconRyP">reconRyP</string>
    <string name="reconCruza">reconCruza</string>
    <string name="audioSwitch">audioSwitch</string>
    <string name="dificultySwitch">dificultySwitch</string>
    <string name="accept_config">Aceptar y Salir</string>
    <string name="cancel_config">Salir sin guardar</string>
    <string name="horse_image">Horse image</string>
    <string name="minijuego">minijuego</string>
    <string name="confetiDrawableName">confeti_00</string>
    <string name="cupDrawableName">copa_rotando00</string>
    <string name="about">ACERCA DE CEDICA RAZAS Y PELAJES.\nEl Centro de Equitación para Personas con Discapacidad y Carenciadas -CEDICA- es una Asociación Civil sin Fines de Lucro fundada en 1994 en la ciudad de La Plata, Provincia de Buenos Aires. Trabaja con la finalidad de igualar oportunidades en pos de la Inclusión Social, procurando la reinserción familiar, el logro de la escolaridad, la integración laboral y la mejora integral de la calidad de vida. La actividad se denomina Terapias y Actividades Asistidas con Caballos (TACAs).\nCEDICA junto al Laboratorio de Investigación en Nuevas Tecnologías Informáticas -LINTI- de la Facultad de Informática de la Universidad Nacional de La Plata, como proyecto final  2018 de la cátedra de Laboratorio de Software, efectuaron en equipo la presente aplicación, que consiste en identificar las distintas razas, pelajes y cruzas de los caballos de CEDICA para favorecer los procesos terapéuticos y de enseñanza y aprendizaje de las alumnas y alumnos que concurren al centro.\nLa finalidad es que los jinetes y amazonas puedan reconocer las razas, pelajes y cruzas de los diferentes caballos que se encuentran en la Institución, mediante la instancia de juego, para luego poder aplicar dicho conocimiento de manera vivencial.\nLa aplicación está compuesta por:\n1.- MODO RECONOCIMIENTO: donde el objetivo es que las amazonas y jinetes puedan distinguir su caballo y el de sus compañeras y compañeros. Compuesto por una galería de imágenes y audios que brindan mayor información respecto a las razas, pelajes y cruzas de las opciones presentes.\n2.- MODO JUEGO: compuesto por una serie de minijuegos que consisten en avanzar de nivel, según los aciertos obtenidos, hacia una mayor complejidad. El jugador ganará al sortear los diferentes niveles pudiendo adentrarse a una nueva aventura.\nRaimondi Sebastian y Rios Gaston.</string>
</resources>
