<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="89dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:text="@string/modo_reconocimiento"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="100dp"
        android:text="@string/minijuego"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="225dp"
        android:text="@string/modo_interaccion"
        app:layout_constraintStart_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajustes"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lista" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grilla" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:text="@string/razas"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox4"
        app:layout_constraintStart_toStartOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/cruzas"
        app:layout_constraintBaseline_toBaselineOf="@+id/checkBox4"
        app:layout_constraintStart_toEndOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="35dp"
        android:text="@string/pelajes"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/main_button"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/interaccion_a" />

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/interaccion_b" />

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/interaccion_c" />
    </RadioGroup>

    <Switch
        android:id="@+id/Level"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="258dp"
        android:layout_marginRight="258dp"
        android:switchMinWidth="100dp"
        android:text="@string/nivel_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/nivel_2"
        app:layout_constraintBaseline_toBaselineOf="@+id/Level"
        app:layout_constraintStart_toEndOf="@+id/Level" />

    <Switch
        android:id="@+id/Sex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:switchMinWidth="100dp"
        android:text="@string/masculina"
        app:layout_constraintEnd_toEndOf="@+id/Level"
        app:layout_constraintStart_toStartOf="@+id/Level"
        app:layout_constraintTop_toBottomOf="@+id/Level" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:text="@string/femenina"
        app:layout_constraintBaseline_toBaselineOf="@+id/Sex"
        app:layout_constraintStart_toEndOf="@+id/Sex" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="260dp"
        android:layout_height="123dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="175dp"
        android:layout_marginRight="175dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/razas_y_pelajes" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/radiobutton"
            tools:text="Razas y Pelajes juntas" />

        <RadioButton
            android:id="@+id/radioButton16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cruza" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>