<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="89dp">

    <Button
        android:id="@+id/button6"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@drawable/main_button"
        android:text="@string/jugar"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@drawable/main_button"
        android:text="@string/reconocimiento"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="263dp"
        android:layout_marginLeft="263dp"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/cedica"
        android:contentDescription="@string/cedica_logo" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="920dp"
        android:layout_marginRight="920dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/roundcorner"
        android:onClick="toConfig"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/imageButton6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_help"
        android:contentDescription="@string/help_image" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        android:background="@drawable/roundcorner"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_white_18dp"
        android:contentDescription="@string/settings_image" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:layout_marginBottom="32dp"
        android:text="@string/razas_y_pelajes"
        android:textSize="70sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>